Workload_Generator/sample-deployment-resources/hcApp/hcApp-m1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hcm1
  labels:
    app: hcm1
    service: hcm1
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: hcm1
