Workload_Generator/sample-deployment-resources/hcApp/hcApp-m2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hcm2
  labels:
    app: hcm2
    service: hcm2
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: hcm2
