Workload_Generator/sample-deployment-resources/hcApp/hcApp-m3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hcm3
  labels:
    app: hcm3
    service: hcm3
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: hcm3
