Workload_Generator/sample-deployment-resources/hcApp/hcApp-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: hcapp-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "hcm1.hcapp.svc.cluster.local"
    - "hcm3.hcapp.svc.cluster.local"
