Workload_Generator/sample-deployment-resources/hcApp/hcApp-m2-dr.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: hcapp-m2-dr
spec:
  host: "hcm2.hcapp.svc.cluster.local"
