Workload_Generator/sample-deployment-resources/hcApp/hcApp-m3-dr.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: hcapp-m3-dr
spec:
  host: "hcm3.hcapp.svc.cluster.local"
