Workload_Generator/sample-deployment-resources/hcApp/hcApp-m3-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hcm3
spec:
  hosts:
  - "hcm3.hcapp.svc.cluster.local"
  gateways:
  - mesh
  - hcapp-gateway
  http:
  - match:
    - uri:
        prefix: /DummyM/home
    - uri:
        prefix: /DummyM/getResults
    - uri:
        prefix: /DummyM/addData
    route:
    - destination:
        port:
          number: 8080
        host: hcm3
